# rankmyapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  architecture.mmd  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/adapters/: __init__.py
src/adapters/http/: __init__.py  dependencies.py  exception_handlers.py  health.py  middleware.py  routers.py  schemas.py
src/adapters/messaging/: __init__.py  rabbitmq_publisher.py
src/adapters/persistence/: __init__.py  mongo_order_repository.py
src/app/: __init__.py  config.py  container.py  main.py
src/application/: __init__.py
src/application/use_cases/: __init__.py  create_order.py  get_order.py  update_order_status.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  order.py
src/domain/exceptions/: __init__.py  order_exceptions.py
src/domain/ports/: __init__.py  message_broker_port.py  repository_port.py
src/domain/value_objects/: __init__.py  money.py  order_id.py  order_status.py
tests/: __init__.py  conftest.py
tests/adapters/: test_http_health.py  test_http_schemas.py  test_mongo_repository.py  test_rabbitmq_publisher.py
tests/adapters/http/: test_dependencies.py
tests/app/: test_config.py  test_container.py
tests/application/: test_create_order_use_case.py  test_get_order_use_case.py  test_update_order_status_use_case.py
tests/domain/: test_money.py  test_order_entity.py  test_order_status.py
